# led_animation_manager

./: CMakeLists.txt  LICENSE  README.md  SoftwareContentRegister.txt  common.h  main.cpp
led_daemon/: CMakeLists.txt  animation.cpp  animation.hpp  common.h  leds.cpp  leds.hpp  ledstrip.cpp  ledstrip.hpp  main.cpp
sendAlexaMsgQ/: CMakeLists.txt  README.md  sendAlexaMsgQ.c
src/: CMakeLists.txt  animation.cpp  animation.hpp  animations.conf  common.h  leds.cpp  leds.hpp  ledstrip.cpp  ledstrip.hpp  main.cpp
test/: CMakeLists.txt  README.md  set_animation.c
